# onedrive-slideshow

./: .gitignore  Build-MSIX.ps1  Cargo.toml  README.md  appxmanifest.xml  onedrive-slideshow.appinstaller  rust-toolchain.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml
examples/simple/: slideshow.txt
installer/: onedrive-slideshow.appinstaller
src/: auth.rs  cred_store.rs  http.rs  image_loader.rs  item_loader.rs  main.rs
ui/: auth.html  error.html  image.html  loading.html  video.html
