[package]
name = "onedrive_slideshow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.4"
cfg-if = "1.0"
eframe = "0.21"
egui_extras = { version = "0.21", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
mockito = { version = "1.0" }
rand = "0.8"
reqwest = { version = "0.11", features = ["gzip", "json"] }
serde = "1.0"
serde_json = "1.0"
sys-info = "0.9"
tokio = { version = "1.26", features = ["rt", "net", "time", "rt-multi-thread"] }

# Build openssl from source instead of linking it.
# Required for cross-compilation.
native-tls = { version = "0.2", features = ["vendored"] }
