[package]
name = "onedrive_slideshow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.9"
cfg-if = "1.0"
crossbeam-utils = "0.8"
rand = "0.9"
reqwest = { version = "0.12", features = ["gzip", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-info = "0.9"
tao = "0.32"
tokio = { version = "1.43", features = ["fs", "rt", "net", "time", "rt-multi-thread", "macros"] }
wry = "0.50"

# Build openssl from source instead of linking it.
# Required for cross-compilation.
native-tls = { version = "0.2", features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = {version = "0.59", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_Security_Credentials"] }

[dev-dependencies]
mockito = "1.6"
